# cxx-debug-config

./: .gitignore  README.md  ngnx.c  settings.json
cmake-cygwin/: CMakeLists.txt  main.cxx
cmake-cygwin-multi/: CMakeLists.txt
cmake-cygwin-multi/src/: fabonacci.cxx  main.cxx
cmake-ninja/: CMakeLists.txt  fabonacci.cxx  fabonacci.hpp  main.cxx
hello-cygwin/: main.c
hello-llvm-clang64/: main.cpp
hello-mingw64/: main.c
hello-msys2-clang64/: main.c
hello-msys2-mingw64/: main.cpp
