cmake_minimum_required(VERSION 3.1.14)
set(CMAKE_GENERATOR "UNIX Makefiles" CACHE INTERNAL "" FORCE)
set(CMAKE_PREFIX_PATH ./)
# set(CMAKE_GENERATOR "UNIX Makefiles")
set(CMAKE_C_COMPILE "E:/Cplus/Mingw-w64/bin/gcc.exe")
set(CMAKE_CXX_COMPILE "E:/Cplus/Mingw-w64/bin/gcc.exe")
# SET(CMAKE_C_COMPILER_WORKS TRUE)
# SET(CMAKE_CXX_COMPILER_WORKS TRUE)
# SET(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -Werror")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror")
project(main)
aux_source_directory (./ SRC_LIST)

add_executable(main ${SRC_LIST})
